[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tool-call-budgets"
version = "0.1.0"
description = "Per-tool call-count caps for AI agent runs. Stop runaway loops before they hit your invoice. Zero deps."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Mukunda Katta", email = "mukunda.vjcs6@gmail.com" },
]
keywords = ["llm", "agent", "budget", "tool-call", "safety", "governance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[project.urls]
Homepage = "https://github.com/MukundaKatta/tool-call-budgets"
Repository = "https://github.com/MukundaKatta/tool-call-budgets"
Issues = "https://github.com/MukundaKatta/tool-call-budgets/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
